// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionalExecution matches snapshot when no data 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-left-medium StyledProps--padding-right-huge"
      style="width: 846px;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-size-small"
      >
        pipeline.conditionalExecution.subTitle
         
        <a
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue400 StyledProps--font StyledProps--font-size-small Button--with-current-color Button--link"
          href="https://ngdocs.harness.io/article/i36ibenkq2-step-skip-condition-settings"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            pipeline.createPipeline.learnMore
          </span>
        </a>
      </p>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-top-xxlarge StyledProps--padding-bottom-medium StyledProps--margin-top-medium StyledProps--border StyledProps--border-top StyledProps--border-color-grey200"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-right-xxlarge StyledProps--border StyledProps--border-right StyledProps--border-color-grey200"
          style="width: 48%;"
        >
          <div>
            <label
              class="bp3-control bp3-radio blackText active"
            >
              <input
                checked=""
                name="Blueprint3.RadioGroup-0"
                type="radio"
                value="Success"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.success
            </label>
            <br />
            <label
              class="bp3-control bp3-radio blackText"
            >
              <input
                name="Blueprint3.RadioGroup-0"
                type="radio"
                value="All"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.all
            </label>
            <br />
            <label
              class="bp3-control bp3-radio blackText"
            >
              <input
                name="Blueprint3.RadioGroup-0"
                type="radio"
                value="Failure"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.failure
            </label>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-left-xxlarge"
          style="width: 52%;"
        >
          <label
            class="bp3-control bp3-checkbox blackText"
          >
            <input
              name="enableJEXL"
              type="checkbox"
            />
            <span
              class="bp3-control-indicator"
            />
            <span
              data-tooltip-id="conditionalExecution"
            >
              pipeline.conditionalExecution.condition
            </span>
          </label>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-small StyledProps--padding-left-large"
          >
            <div
              class="main disabled"
            >
              <textarea
                name="condition"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConditionalExecution matches snapshot with data 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-left-medium StyledProps--padding-right-huge"
      style="width: 846px;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-size-small"
      >
        pipeline.conditionalExecution.subTitle
         
        <a
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue400 StyledProps--font StyledProps--font-size-small Button--with-current-color Button--link"
          href="https://ngdocs.harness.io/article/i36ibenkq2-step-skip-condition-settings"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            pipeline.createPipeline.learnMore
          </span>
        </a>
      </p>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-top-xxlarge StyledProps--padding-bottom-medium StyledProps--margin-top-medium StyledProps--border StyledProps--border-top StyledProps--border-color-grey200"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-right-xxlarge StyledProps--border StyledProps--border-right StyledProps--border-color-grey200"
          style="width: 48%;"
        >
          <div>
            <label
              class="bp3-control bp3-radio blackText active"
            >
              <input
                checked=""
                name="Blueprint3.RadioGroup-1"
                type="radio"
                value="Success"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.success
            </label>
            <br />
            <label
              class="bp3-control bp3-radio blackText"
            >
              <input
                name="Blueprint3.RadioGroup-1"
                type="radio"
                value="All"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.all
            </label>
            <br />
            <label
              class="bp3-control bp3-radio blackText"
            >
              <input
                name="Blueprint3.RadioGroup-1"
                type="radio"
                value="Failure"
              />
              <span
                class="bp3-control-indicator"
              />
              pipeline.conditionalExecution.statusOption.failure
            </label>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-left-xxlarge"
          style="width: 52%;"
        >
          <label
            class="bp3-control bp3-checkbox blackText active"
          >
            <input
              checked=""
              name="enableJEXL"
              type="checkbox"
            />
            <span
              class="bp3-control-indicator"
            />
            <span
              data-tooltip-id="conditionalExecution"
            >
              pipeline.conditionalExecution.condition
            </span>
          </label>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-small StyledProps--padding-left-large"
          >
            <div
              class="main"
            >
              <textarea
                name="condition"
              >
                some condition
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
